--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,13 +1,17 @@
-.navbar{
+.navbar {
     display: flex;
+    width: 100%;
+    background: lightblue;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .logo{
-    width: 10%;
+    width: 15%;
 }
 
 .nav-options{
     display: flex;
-    justify-content: space-between;
-    background-color: greenyellow;
+    width: 85%;
+    justify-content: space-around;
 }
